Separate MAKE from TO, and port the arms they share
MAKE and TO were one function here and are two in the C, which says so in
three places: the make flag handed to Make_Block_Type, and the
action != A_MAKE tested in the scalar arms. TO converts, so it wraps what
it is given; MAKE builds, so it reads a number as room and a logic as one
or zero. T_Integer leaves a note where it refuses a logic to TO -- no
integer is uniquely representative of true.

Ported with it: T_Decimal's switch and Scan_Decimal, make_binary,
make_string, Scan_Money, MT_Date's positional grammar, and the hex arm of
TO INTEGER!. Two of those turned out to be a list of datatypes rather than
a rule, and reading them as a rule is what had gone wrong -- a percent, a
paren, a path and an issue all have bytes underneath and are all refused
where the decimal, block, string and word they resemble are taken.

Dates were ordered by their molded text, so 9-Jan-2000 came after
10-Jan-2000. They order by the instant they name now. Adding to one dropped
its clock and its zone, read a time as a count of days, and truncated a
fraction of a day; the C reaches those through three separate arms.

Two crashes. A lone surrogate threw out of CharacterValue and stopped the
interpreter where a script should have caught invalid-char. random/secure
now drew a month and a day against the date's own month and day and then
built whatever came out, so once today was the 31st an impossible February
threw -- the C draws over fixed ranges and normalises.

COPY of a map returned the same map: the switch had a case for every
container except a map. same? compared maps and bitsets by content, so a
map was the same value as its own copy. And /types and /deep were one
question when they are two -- without /deep a copied member is copied and
its own contents stay shared.

pick on a bitset accepted a char and answered false for everything else,
which reads as "the set does not hold it" rather than as a question never
asked. zero? refuse